--- a/webapp/index.html
+++ b/webapp/index.html
@@ -1,5 +1,6 @@
 <html>
     <head>
+        <title>Ananya Fiori Application</title>
         <!-- Bootstraping code -->
         <script src="https://ui5.sap.com/resources/sap-ui-core.js"
                 data-sap-ui-libs="sap.m"
